<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">爱运动@网球</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_base">BaseActivity</string>

    <!-- Strings related to login -->
    <string name="prompt_user">账号</string>
    <string name="prompt_register_user">手机号/邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="KeepPassword">记住密码</string>
    <string name="freeSignup">免费注册>></string>
    <string name="title_activity_register">Register</string>
    <string name="register">注册</string>
    <string name="man">先生</string>
    <string name="women">女士</string>
    <string name="submit">提交</string>
    <string name="title_activity_event_list">找活动</string>
    <string name="login">登陆</string>
    <string name="title_activity_more">更多</string>
    <string name="about_app">关于APP</string>
    <string name="about_update">版本更新</string>
    <string name="about_receive_msg">是否接受推送消息</string>
    <string name="feedback">意见反馈</string>
    <string name="more">更多</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_court_list">找球场</string>
    <string name="back">返回</string>
    <string name="notify_feedback">您有新消息</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_friend_list">找球友</string>
    <string name="title_activity_friend">球友信息</string>
    <string name="title_activity_court">球场信息</string>
    <string name="title_activity_event">活动信息</string>
    <string name="title_activity_conversation">用户反馈</string>
    <string name="title_activity_publish_event">发起活动</string>
    <string name="personal_page">个人中心</string>
    <string name="OK">确定</string>
    <string name="Cancel">取消</string>
    <string name="exit_dialog_message">亲，真得要退出吗?</string>
    <string name="share_content">爱运动的小伙伴们看过来，快来下载爱运动@网球，关注我们的微信公众账号:FreeTeam</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="city">城市</string>
    <string name="hot_city">热门城市</string>
    <string name="hot">热</string>
    <string name="hint_search_city">搜索城市</string>
    <string name="title_activity_event_promotional_acivity">EventPromotionalAcivity</string>
    <string name="title_activity_about">About</string>
    <string name="about">作者：倪旭晨\n联系电话:13761398648\n邮箱：gushedaoren@gmail.com\n个人网站:nixuchen.com\n关注微信公众号:FreeTeam</string>
    <string name="title_activity_person_page">PersonPage</string>

</resources>
