<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/theme"
    android:layout_height="match_parent">


    <LinearLayout
        android:paddingLeft="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


        <TextView
            android:paddingTop="10dp"
            android:textSize="22sp"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/text_color"
            android:text="@string/exit_dialog_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/OK"
            android:text="@string/OK"
            android:textSize="18sp"
            android:layout_weight="1"
            android:textColor="@color/text_color"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/Cancel"
            android:text="@string/Cancel"
            android:textSize="18sp"
            android:layout_weight="1"
            android:textColor="@color/text_color"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        </LinearLayout>

</LinearLayout>