<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitesmoke"
    tools:context="air.balloon.tennis.app.RegisterActivity">


    <LinearLayout
        android:id="@+id/layout_titleBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/title_bar"></include>

        </LinearLayout>



    <ScrollView
        android:layout_below="@id/layout_titleBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"

            android:layout_height="wrap_content">


            
            <EditText
                android:layout_marginTop="40dp"
                android:hint="@string/prompt_register_user"

                android:layout_width="fill_parent"
                android:layout_height="50dip" />



            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="70dp"
                    android:background="@color/theme"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/prompt_password"
                    android:layout_height="40dp" />

                <EditText
                    android:layout_marginLeft="10dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
                </LinearLayout>



        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="70dp"
                android:background="@color/theme"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/confirm_password"
                android:layout_height="40dp" />

            <EditText
                android:layout_marginLeft="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>



            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:id="@+id/layout_gender_man"
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:checked="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_marginLeft="2dp"
                        android:textColor="@color/theme"
                        android:text="@string/man"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_gender_women"
                    android:layout_centerInParent="true"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <CheckBox

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_marginLeft="2dp"
                        android:textColor="@color/theme"
                        android:text="@string/women"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>


            </RelativeLayout>


            <Button
                android:text="@string/submit"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:background="@color/theme"
                android:layout_width="fill_parent"
                android:layout_height="45dp" />
    </LinearLayout>


        </ScrollView>

</RelativeLayout>
