<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="air.balloon.tennis.app.MoreActivity">


    <LinearLayout
        android:id="@+id/layout_titleBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        >

        <include layout="@layout/title_bar"></include>

    </LinearLayout>


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_titleBar">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">


            <LinearLayout

                android:id="@+id/btn_more1"
                android:layout_width="fill_parent"
                android:layout_height="40dp"

                android:background="@color/theme3"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_app"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:background="@drawable/abc_list_divider_holo_light"
                android:layout_height="2dp"
                />
            <LinearLayout
                android:id="@+id/btn_more2"
                android:layout_width="fill_parent"
                android:layout_height="40dp"

                android:background="@color/theme3"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_update"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:background="@drawable/abc_list_divider_holo_light"
                android:layout_height="2dp"
                />
            <LinearLayout
                android:id="@+id/btn_more3"
                android:layout_width="fill_parent"
                android:layout_height="40dp"

                android:background="@color/theme3"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_receive_msg"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black" />

            </LinearLayout>



            <LinearLayout
                android:id="@+id/btn_more4"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@color/theme3"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:background="@drawable/abc_list_divider_holo_light"
                android:layout_height="2dp"
                />

            <LinearLayout
                android:id="@+id/btn_more5"
                android:layout_width="fill_parent"
                android:layout_height="40dp"

                android:background="@color/theme3"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:background="@drawable/abc_list_divider_holo_light"
                android:layout_height="2dp"
                />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:id="@+id/btn_more6"
                android:background="@color/theme3"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
