<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"

    android:background="@color/theme"
    tools:context="air.balloon.tennis.app.LoginActivity">



    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

             <ImageView
                 android:layout_width="150dip"
                 android:src="@drawable/flower"
                 android:layout_margin="15dip"
                 android:adjustViewBounds="true"
                 android:layout_height="wrap_content" />


            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_user"


                    android:inputType="textPhonetic"
                    android:maxLines="1"
                    android:singleLine="true"/>



                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"

                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>

                <Button
                    android:id="@+id/sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="登陆"
                    android:textColor="@color/theme"
                    android:textStyle="bold"/>

            </LinearLayout>


            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_centerVertical="true"
                    android:id="@+id/layout_keep"
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/KeepPassword"
                        android:layout_marginLeft="3dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    </LinearLayout>


                <LinearLayout
                    android:id="@+id/signup"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:gravity="center_vertical"

                    android:layout_height="fill_parent">


                    <TextView
                        android:text="@string/freeSignup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                    </LinearLayout>
                </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>



