<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:id="@+id/btn_left1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/main_left1_bg_selector"

            />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:text="@string/title_activity_event_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            </RelativeLayout>
        </FrameLayout>



    <FrameLayout
        android:id="@+id/btn_left2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/main_left2_bg_selector"

            />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:text="@string/title_activity_court_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </RelativeLayout>
    </FrameLayout>




    <FrameLayout
        android:id="@+id/btn_left3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/main_left3_bg_selector"

            />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:text="@string/title_activity_friend_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </RelativeLayout>
    </FrameLayout>

</LinearLayout>